--- a/css/esercizio.css
+++ b/css/esercizio.css
@@ -2,7 +2,7 @@
 
 
 
-/* Esercizio 1  */
+/* Esercizio 1 OK */
 
 .ex-1-square {
     transition: background-color 2s;
@@ -12,3 +12,163 @@
 .ex-1-square:hover {
     background-color: red;
 }
+
+
+
+
+/* Esercizio 2 */
+
+.ex-2-square {
+    transition: width 2s;
+}
+
+.ex-2-square:hover {
+    width: 100%;
+}
+
+
+
+
+/* Esercizio 3 OK*/
+
+.ex-3-square {
+    transition: border-radius  1s;
+}
+
+.ex-3-square:hover {
+    border-radius: 100%;
+}
+
+
+
+
+/* Esercizio 4  OK*/
+
+.ex-4-square {
+    transition: background-color 1s;
+}
+
+.ex-4-square:hover {
+    background-color: #f5f5f5;;
+}
+
+
+
+
+/* Esercizio 5 */
+
+.ex-5-square {
+
+}
+
+.ex-5-square:hover {
+    height: 100%;
+}
+
+
+
+
+/* Esercizio 6 */
+
+.ex-6-square {
+
+}
+
+.ex-6-square:hover {
+
+}
+
+
+
+
+/* Esercizio 7 */
+
+.ex-7-square {
+
+}
+
+.ex-7-square:hover {
+
+}
+
+
+
+
+/* Esercizio 8 */
+
+.ex-8-square {
+
+}
+
+.ex-8-square:hover {
+
+}
+
+
+
+
+/* Esercizio 9 */
+
+.ex-9-square {
+
+}
+
+.ex-9-square:hover {
+
+}
+
+
+
+
+/* Esercizio 10 */
+
+.ex-10-square {
+
+}
+
+.ex-10-square:hover {
+
+}
+
+
+
+
+/* Esercizio 11 */
+
+.ex-11-square {
+
+}
+
+.ex-11-square:hover {
+
+}
+
+
+
+
+/* Esercizio 12 */
+
+.ex-12-square {
+
+}
+
+.ex-12-square:hover {
+
+}
+
+
+
+
+/* Esercizio 13 */
+
+.ex-13-square {
+
+}
+
+.ex-13-square:hover {
+
+}
+
+
+
+
