--- a/css/esercizio.css
+++ b/css/esercizio.css
@@ -16,13 +16,13 @@
 
 
 
-/* Esercizio 2 */
+/* Esercizio 2 OK*/
 
 .ex-2-square {
     transition: width 2s;
 }
 
-.ex-2-square:hover {
+.ex-2-square:active {
     width: 100%;
 }
 
@@ -36,7 +36,7 @@
 }
 
 .ex-3-square:hover {
-    border-radius: 100%;
+    border-radius: 50%;
 }
 
 
@@ -55,40 +55,45 @@
 
 
 
-/* Esercizio 5 */
+/* Esercizio 5  ******************Corregere**********************/
 
 .ex-5-square {
-
+    transition: all 1s;
 }
 
 .ex-5-square:hover {
-    height: 100%;
+    height: 100px;
+    width: 100px;
+    padding: 0;
+    margin: 0;
+}
+
+.ex-5-square:active {
+    height: 40px;
+    width: 40px;
+   
 }
 
 
 
 
-/* Esercizio 6 */
+/* Esercizio 6 OK*/
 
-.ex-6-square {
-
-}
-
-.ex-6-square:hover {
-
+.ex-6-img:hover {
+    filter: grayscale(100%);
 }
 
 
 
 
-/* Esercizio 7 */
+/* Esercizio 7 OK*/
 
-.ex-7-square {
-
+.ex-7-img {
+    transition: filter 2s;
 }
 
-.ex-7-square:hover {
-
+.ex-7-img:hover {
+    filter: sepia(0.8);
 }
 
 
