--- a/css/esercizio.css
+++ b/css/esercizio.css
@@ -148,18 +148,22 @@
 
 
 
-/* Esercizio 11 */
+/* Esercizio 11 OK*/
 
-.ex-11-square {
-
+.ex-11-icon:hover {
+    animation-name: example1;
+    animation-duration: 2s;
+    animation-timing-function: linear;
 }
 
-.ex-11-square:hover {
+@keyframes example1 {
+    0%  {transform: rotate(0deg);}
+    90% {transform: rotate(360deg);}
+    100% {transform: rotate(0deg);}
+  }
 
-}
 
-
-
+  
 
 /* Esercizio 12 */
 
