--- a/css/esercizio.css
+++ b/css/esercizio.css
@@ -113,19 +113,16 @@
 
 
 
-/* Esercizio 9 ******************Corregere***********************/
+/* Esercizio 9 OK*/
 
 .ex-9-img {
     transition: all 2s;
 }
 
 .ex-9-img:hover {
-    /* border-radius: 20px;
+    border-radius: 20px;
     filter: sepia(0.8);
-    height: 300px;
-    width: 500px;
-    padding: 0;
-    margin: 0; */
+    transform: scale(1.5);
 }
 
 
@@ -134,7 +131,6 @@
 /* Esercizio 10 OK*/
 
 .ex-10-icon {
-
     animation-name: example;
     animation-duration: 1s;
     animation-timing-function: linear;
@@ -163,31 +159,61 @@
   }
 
 
-  
 
-/* Esercizio 12 */
 
-.ex-12-square {
+/* Esercizio 12 OK*/
 
+
+.ex-12-button:hover .ex-12-top-white {
+    animation-name: example3;
+    animation-duration: 3s;
 }
 
-.ex-12-square:hover {
-
+.ex-12-button:hover .ex-12-bottom-white {
+    animation-name: example4;
+    animation-duration: 3s;
 }
+
+@keyframes example3 {
+  0%   {left: 20%;}
+  50% {left: 60%;}
+}
+
+@keyframes example4 {
+    0%   {right: 20%;}
+    50% {right: 60%;}
+  }
 
 
 
 
 /* Esercizio 13 */
 
-.ex-13-square {
-
+.ex-13-top-white {
+    background-color: red;
+    left: 20%;
+    position: absolute;
+}
+.ex-13-button:hover .ex-13-top-white {
+    animation-name: example5;
+    animation-duration: 3s;
 }
 
-.ex-13-square:hover {
-
+.ex-13-button:hover .ex-13-bottom-white {
+    animation-name: example6;
+    animation-duration: 3s;
 }
 
+@keyframes example5 {
+    0%   {left:20%;}
+    25%  {left:85%;}
+    50%  { top: 10%;}
+}
+
+@keyframes example6 {
+    0%   {right: 20%;}
+    50% {right: 60%;}
+  }
 
 
 
