--- a/css/esercizio.css
+++ b/css/esercizio.css
@@ -174,12 +174,12 @@
 
 @keyframes example3 {
   0%   {left: 20%;}
-  50% {left: 60%;}
+  50% {left: 69%;}
 }
 
 @keyframes example4 {
     0%   {right: 20%;}
-    50% {right: 60%;}
+    50% {right: 69%;}
   }
 
 
@@ -188,29 +188,43 @@
 /* Esercizio 13 */
 
 .ex-13-top-white {
-    background-color: red;
-    left: 20%;
+    
     position: absolute;
 }
 .ex-13-button:hover .ex-13-top-white {
     animation-name: example5;
     animation-duration: 3s;
+    animation-timing-function: linear;
+
 }
 
 .ex-13-button:hover .ex-13-bottom-white {
     animation-name: example6;
     animation-duration: 3s;
+    animation-timing-function: linear;
+
 }
 
 @keyframes example5 {
-    0%   {left:20%;}
-    25%  {left:85%;}
-    50%  { top: 10%;}
+    0%   {left:20%;top:-5%;}
+    25%  {left:80%;top: -5%;}
+    35%  {left:80%; top: 50%;}
+    40%  {left:80%; top: 100%}
+    45%  {left:20%; top: 100%;}
+    55%  {left:-10%; top: 100%;}
+    65%  {left:-10%; top: 100%;}
+    75%  {left:-10%; top: -5%;}
 }
 
 @keyframes example6 {
-    0%   {right: 20%;}
-    50% {right: 60%;}
+    0%   {right:20%;bottom:-5%;}
+    25%  {right:80%;bottom: -5%;}
+    35%  {right:80%; bottom: 100%;}
+    40%  {right:80%; bottom: 100%}
+    45%  {right:20%; bottom: 100%;}
+    55%  {right:-10%; bottom: 100%;}
+    65%  {right:-10%; bottom: 100%;}
+    75%  {right:-10%; bottom: -5%;}
   }
 
 
