--- a/css/esercizio.css
+++ b/css/esercizio.css
@@ -152,7 +152,7 @@
 
 @keyframes example1 {
     0%  {transform: rotate(0deg);}
-    90% {transform: rotate(360deg);}
+    90% {transform: rotate(270deg);}
     100% {transform: rotate(0deg);}
   }
 
@@ -188,43 +188,36 @@
 /* Esercizio 13 */
 
 .ex-13-top-white {
-    
     position: absolute;
 }
 .ex-13-button:hover .ex-13-top-white {
     animation-name: example5;
     animation-duration: 3s;
     animation-timing-function: linear;
-
 }
 
 .ex-13-button:hover .ex-13-bottom-white {
     animation-name: example6;
     animation-duration: 3s;
     animation-timing-function: linear;
-
 }
 
 @keyframes example5 {
-    0%   {left:20%;top:-5%;}
-    25%  {left:80%;top: -5%;}
-    35%  {left:80%; top: 50%;}
-    40%  {left:80%; top: 100%}
-    45%  {left:20%; top: 100%;}
-    55%  {left:-10%; top: 100%;}
-    65%  {left:-10%; top: 100%;}
-    75%  {left:-10%; top: -5%;}
+    0%   {left:10%;top:-10px;} /* Da inizio a top right*/
+    25%  {left:80%;top: -10px;} /* Da top right a bottom right */
+    40%  {left:80%; top: 100%;}
+    75%  {left:-10%; top: 100%;}
+    90%  {left:-10%; top: -10px;}
+    100% {left:10%;top:-10px;}
 }
 
 @keyframes example6 {
-    0%   {right:20%;bottom:-5%;}
-    25%  {right:80%;bottom: -5%;}
-    35%  {right:80%; bottom: 100%;}
-    40%  {right:80%; bottom: 100%}
-    45%  {right:20%; bottom: 100%;}
-    55%  {right:-10%; bottom: 100%;}
-    65%  {right:-10%; bottom: 100%;}
-    75%  {right:-10%; bottom: -5%;}
+    0%   {right:10%;bottom:-10px;} 
+    25%  {right:80%;bottom: -10px;} 
+    40%  {right:80%; bottom: 100%;}
+    75%  {right:-10%; bottom: 100%;}
+    90%  {right:-10%; bottom: -10px;}
+    100% {right:10%;bottom:-10px;}
   }
 
 
