--- a/Bonus/css/style.css
+++ b/Bonus/css/style.css
@@ -32,10 +32,10 @@ svg {
     color: #e91e63;
     fill:#e91e63
 }
-i {
+.astronave {
+    width: 240px;
     margin-top: 150px;
-    position: absolute;
-    font-size: 100px;
+    position: absolute;   
     color: grey;
     right: 0;
     animation: mymove 5s infinite;
@@ -45,6 +45,39 @@ i {
     from {left: 0px;}
     to {left: 80%;}
   }
+
+.den {
+    position: absolute;
+    width: 150px;
+    margin-top: 120%;
+    animation: denmove 5s linear;
+    left: -100%; top: 40px;
+}
+@keyframes denmove {
+    0%{left: 80%;top: 3px;}
+    10%{left: 70%; top: 20px;}
+    15%{left: 60%; top: 30px;}
+    20%{left: 50%; top: 40px;}
+    25%{left: 40%; top: 40px;}
+    30%{left: 30%; top: 40px;}
+    35%{left: 20%; top: 40px;}
+    40%{left: 10%; top: 40px;}
+    45%{left: 0%; top: 40px;}
+    55%{left: -10%; top: 40px;}
+    60%{left: -20%; top: 40px;}
+    65%{left: -30%; top: 40px;}
+    70%{left: -40%; top: 40px;}
+    75%{left: -50%; top: 40px;}
+    80%{left: -60%; top: 40px;}
+    85%{left: -70%; top: 40px;}
+    90%{left: -80%; top: 40px;}
+    95%{left: -90%; top: 40px;}
+    100%{left: -100%; top: 40px;}
+
+
+    
+  }
+
 
 .planet2 {
     content: '';
